@@ -3,7 +3,9 @@
 perldir = @PERLPATH@/EBox/RemoteServices
 
 mods = Alerts.pm Auth.pm Base.pm Backup.pm Configuration.pm Jobs.pm Monitor.pm \
-	ProxyBackup.pm SOAPClient.pm Subscription.pm WSDispatcher.pm CSV.pm
+	ProxyBackup.pm SOAPClient.pm Subscription.pm WSDispatcher.pm CSV.pm \
+       SupportAccess.pm
+
 
 nobase_perl_DATA = $(mods)
 
