@@ -6,6 +6,8 @@ HEAD
 	+ Set maximum number for eBox common name to 32
 	+ Bugfix: Found a lost method makes the monitorization work again
 	+ Allow read-only script sessions
+	+ Added class for easier parsing of CSV files
+	+ Added remote support option
 1.4.2
 	+ Bugfix: Not allow "." character in common name
 1.3.14
